Fixed the admin username and password visibility

--- a/capstone-showcase/src/CSS/AdminLogin.css
+++ b/capstone-showcase/src/CSS/AdminLogin.css
@@ -22,6 +22,7 @@
 
 .input {
   background-color: white;
+  color: black;
   display: block;
   width: 100%;
   padding: 0.5rem;
